# mana_tools

./: Cargo.toml  config.toml  cross_interface.txt  编译和拷贝文件.bat
innosetup/: config.toml  维护工具安装包.iss
innosetup/static/api/: init.json  readme-demoTree1.txt
innosetup/static/js/: base.js
innosetup/static/js/lay-module/layuimini/: layuimini.js
innosetup/static/lib/layui-v2.5.5/lay/modules/: table.js
innosetup/static/page/: client-log-collect.html  log-down.html  uplog.html
log_config/: Cargo.toml
log_config/src/: lib.rs
log_tool/: .gitignore  Cargo.toml  config.toml  cross_interface.txt  log.toml
log_tool/src/: main.rs
log_viewer/: Cargo.toml
log_viewer/src/: config.rs  loginfo.rs  main.rs
static/: index.html
static/api/: demoTree1.json  init.json  logOption.json  table.json
static/css/: layuimini.css  public.css
static/js/: common.js
static/js/lay-module/dtree/: dtree.js
static/js/lay-module/moduleMy/: myModule.js
static/page/: json-view.html  table.html  uplog.html
static/page/table/: log-detail.html
