[package]
name = "log_config"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml="0.5.8"
mongodb = {version = "1.1.0", default-features = false, features = ["sync"]}