[package]
name = "log_viewer"
version = "0.1.0"
authors = ["liwumeng <910027178@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1.0.0"
actix-files = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
mongodb = {version = "1.1.0", default-features = false, features = ["sync"]}
chrono="*"
bson = "1.2.0"
lazy_static = "1.4.0"
log = "0.4.14"
log4rs = {version="1",features = ["toml_format"]}
subprocess = "0.2.6"
toml="0.5.8"
once_cell="1.7.0"
log_config = { path = "../log_config" }

[dev-dependencies]
actix-rt = "1"
